# xyflow-anywidget

./: .gitignore  .pre-commit-config.yaml  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml
examples/: __init__.py  basic_examples.py  data_science_examples.py  interactive_demos.py
js/: widget.css  widget.jsx
src/xyflow/: __init__.py  data_types.py  nx.py  widget.py
tests/: __init__.py  test_examples.py  test_nx.py  test_snake_case_to_camel_case.py  test_types.py  test_widget.py
